--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,13 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  bloc_test: ^9.0.3
   cached_network_image: ^3.0.0
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0-nullsafety.2
   equatable: ^2.0.2
+  firebase_core: ^1.17.1
+  firebase_crashlytics: ^2.8.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
@@ -54,6 +57,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - certificates/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
